# AutoSoMe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  config.example.yaml  dashboard.html  pyproject.toml  requirements.txt
.cursor/rules/: changelog.mdc
autosome/: __init__.py  __main__.py  cli.py  config.py  parser.py  tracker.py
debug/: analyze_html.py
examples/: sample-post.md  sample-product-profile.md
prompts/: browser-publish-mp.md  browser-publish-xhs.md  content-strategy.md  cover-image.md  desensitization-gate.md  personal-log-copywriting.md  personal-log-mp-copywriting.md  personal-log-strategy.md  personal-log-understanding.md  product-understanding.md  wechat-mp-copywriting.md  xiaohongshu-copywriting.md
